--- a/builder/index.html
+++ b/builder/index.html
@@ -156,8 +156,8 @@
                         </tr>
                         <tr>
                             <th colspan=2 style="border:none;">
-                                <div class="input-group input-group-sm pull-left">
-                                    <span class="input-group-addon" style="padding:2px;"><span class="glyphicon glyphicon-search"></span></span>
+                                <div class="input-group input-group-sm">
+                                    <span class="input-group-addon" style="padding: 0 6px;"><span class="glyphicon glyphicon-search"></span></span>
                                     <input type="text" class="form-control" placeholder="Filter" ng-model="searchText.name" style="padding:2px">
                                 </div>
                             </th>
@@ -518,54 +518,58 @@
                 </div>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-10 col-xs-8 generic-methods ncf_col" ng-if="selectedMethod === undefined">
-                <div class="title">Library</div>
-                <h3 >Generic methods</h3>
-                <div class="panel-group" id="filters" role="tablist" aria-multiselectable="true">
-                  <div class="panel panel-default">
-                    <div class="panel-heading" role="tab" id="filterTitle">
-                      <h4 class="panel-title">
-                        <a role="button" data-toggle="collapse" data-parent="#filters" href="#collapseFilters" aria-expanded="true" aria-controls="collapseFilters">
-                          Filters
-                          <i class="glyphicon glyphicon-chevron-down pull-right"></i>
-                        </a>
-                      </h4>
-                    </div>
-                    <div id="collapseFilters" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="filterTitle">
-                      <div class="panel-body">
-                        <div class=form-group>
-                          <label>Agent type: </label>
-                          <div class="btn-group">
-                            <button class="btn btn-default" ng-class="{active:filter.compatibility == 'all'}" ng-click="filter.compatibility='all'">
-                              All
-                            </button>
-                            <button class="btn btn-default classic-filter" ng-class="{active:filter.compatibility == 'classic'}" ng-click="filter.compatibility='classic'">
-                              Classic <i class="glyphicon glyphicon-cog classic-icon"></i>
-                            </button>
-                            <button class="btn btn-default dsc-filter" ng-class="{active:filter.compatibility == 'dsc'}" ng-click="filter.compatibility='dsc'">
-                              DSC <img src="ncf-builder/css/dsc-icon.svg" class="dsc-icon"></i>
-                            </button>
+              <div class="generic-methods-container">
+                <div class="generic-methods-header">
+                  <div class="title">Library</div>
+                  <h3 >Generic methods</h3>
+                  <div class="panel-group" id="filters" role="tablist" aria-multiselectable="true">
+                    <div class="panel panel-default">
+                      <div class="panel-heading" role="tab" id="filterTitle">
+                        <h4 class="panel-title">
+                          <a role="button" data-toggle="collapse" data-parent="#filters" href="#collapseFilters" aria-expanded="true" aria-controls="collapseFilters">
+                            Filters
+                            <i class="glyphicon glyphicon-chevron-down pull-right"></i>
+                          </a>
+                        </h4>
+                      </div>
+                      <div id="collapseFilters" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="filterTitle">
+                        <div class="panel-body">
+                          <div class=form-group>
+                            <label>Agent type: </label>
+                            <div class="btn-group">
+                              <button class="btn btn-default" ng-class="{active:filter.compatibility == 'all'}" ng-click="filter.compatibility='all'">
+                                All
+                              </button>
+                              <button class="btn btn-default classic-filter" ng-class="{active:filter.compatibility == 'classic'}" ng-click="filter.compatibility='classic'">
+                                Classic <i class="glyphicon glyphicon-cog classic-icon"></i>
+                              </button>
+                              <button class="btn btn-default dsc-filter" ng-class="{active:filter.compatibility == 'dsc'}" ng-click="filter.compatibility='dsc'">
+                                DSC <img src="ncf-builder/css/dsc-icon.svg" class="dsc-icon"/>
+                              </button>
+                            </div>
                           </div>
-                        </div>
-                        <div class="input-group input-group-sm form-group">
-                          <div for="showDeprecated" class="input-group-addon" id="labelShowDeprecated">
-                            <input id="showDeprecated" type="checkbox" class="form-control" ng-model="filter.showDeprecated"/>
+                          <div class="input-group input-group-sm form-group">
+                            <div for="showDeprecated" class="input-group-addon" id="labelShowDeprecated">
+                              <input id="showDeprecated" type="checkbox" class="form-control" ng-model="filter.showDeprecated"/>
+                            </div>
+                            <label for="showDeprecated" class="form-control">
+                              Show deprecated generic methods <i class="glyphicon glyphicon-exclamation-sign deprecated-icon"></i>
+                              <i class="glyphicon glyphicon-ok pull-right" ng-if="filter.showDeprecated"></i>
+                            </label>
                           </div>
-                          <label for="showDeprecated" class="form-control">
-                            Show deprecated generic methods <i class="glyphicon glyphicon-exclamation-sign deprecated-icon"></i>
-                            <i class="glyphicon glyphicon-ok pull-right" ng-if="filter.showDeprecated"></i>
-                          </label>
-                        </div>
-                        <div class="input-group input-group-sm form-group">
-                          <label for="filterMethods" class="input-group-addon" >
-                            <i class="fas fa-search"></i>
-                          </label>
-                          <input id="filterMethods" placeholder="Filter generic methods" type="text" ng-model="filter.text" class="form-control" />
+                          <div class="input-group input-group-sm form-group">
+                            <label for="filterMethods" class="input-group-addon" >
+                              <i class="fas fa-search"></i>
+                            </label>
+                            <input id="filterMethods" placeholder="Filter generic methods" type="text" ng-model="filter.text" class="form-control" />
+                          </div>
                         </div>
                       </div>
                     </div>
                   </div>
                 </div>
-                <ul class="list-unstyled" ng-repeat="(kind,methods) in methodsByCategory" ng-if="checkFilterCategory(methods)">
+                <div class="generic-methods-list">
+                  <ul class="list-unstyled" ng-repeat="(kind,methods) in methodsByCategory" ng-if="checkFilterCategory(methods)">
                     <h4 id={{kind}}>{{capitaliseFirstLetter(kind)}}</h4>
                     <li ng-click="addMethod(method)" ng-repeat="method in methods | filter:filter.text" class="panel-margin-top btn btn-block btn-default btn-method" dnd-draggable="method" dnd-effect-allowed="move" dnd-type="'bundle'" ng-show="checkFilterMethod(method)" ng-class="{'used':isUsed(method)}">
                       <div class="input-group">
@@ -582,7 +586,7 @@
                                     <i class="glyphicon glyphicon-info-sign text-primary method-action"></i>
                                   </a>
                                 </span>
-                                <img src="ncf-builder/css/dsc-icon.svg" class="dsc-icon" ng-if="checkAgentSupport(method,'dsc')"></i>
+                                <img src="ncf-builder/css/dsc-icon.svg" class="dsc-icon" ng-if="checkAgentSupport(method,'dsc')">
                                 <i class="glyphicon glyphicon-cog classic-icon" ng-if="checkAgentSupport(method,'cfengine-community')"></i>
                                 <br style="clear:both"/>
                                 <small class="pull-left method-margin" >
@@ -595,7 +599,9 @@
                         </div>
                       </div>
                     </li>
-                </ul>
+                  </ul>
+                </div>
+              </div>
             </div>
             <div class="col-lg-1 col-md-1 col-sm-2 col-xs-4 ncf_col no-padding" class="bs-sidebar navbar" ng-if="selectedMethod === undefined">
                 <ul class="nav bs-sidenav" id="categories-list">
